photography by sobuz

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                         <div class="fortfolio_name">
                             <div class="Projects">
                                 <div class="project_img">
-                                    <img src="./portfolio imgas/webside.png" alt="">
+                                    <img src="./portfolio imgas/webside (1).png" alt="">
 
                                 </div>
                                 <div class="each_project">
@@ -325,7 +325,7 @@
                                 </div>
                                 <div class="each_project">
                                     <h2>Photography Website</h2>
-                                    <h3><a href="">live link</a></h3>
+                                    <h3><a href="https://bithewdp.github.io/photography-by-Sobuz/">live link</a></h3>
                                 </div>
 
 
