--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                         </li>
                         <li class="ul_contact"><a href="#">contact</a>   
                             <ul class="Contacts">
-                                <li><a href="#">Link 1</a></li>
-                                <li><a href="#">Link 2</a></li>
-                                <li><a href="#">Link 3</a></li>
-                                <li><a href="#">Link 4</a></li>
+                                <li><a href="#">contant first area</a></li>
+                                <li><a href="#">second area</a></li>
+                                <li><a href="#">third area</a></li>
+                                <li><a href="#">fourth area</a></li>
                             </ul>
                         </li>
 
